--- a/paginas/maisvendidos.phtml
+++ b/paginas/maisvendidos.phtml
@@ -1,11 +1,33 @@
 <section id="main_produtos">
-    <h2>Mais Vendidos</h2>
-    <hr>
+
+    <div class="top">
+        <h2>Mais Vendidos</h2>
+        <button class="btn-of" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling"><i class="bi bi-list"></i>Filtro</button>
+
+        <div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
+            <div class="header">
+                <h5 class="offcanvas-title" id="offcanvasScrollingLabel">FILTRO</h5>
+                <button type="button" class="close" data-bs-dismiss="offcanvas" aria-label="Close"><i class="bi bi-x"></i></button>
+
+            </div>
+            <hr>
+            <div class="offcanvas-body">
+                <form action="">
+                  
+                        <button class="filtrar">Filtrar Agora</button>
+               
+                </form>
+            </div>
+        </div>
+
+    </div>
+
+
     <div class="produto_flex">
         <a href="detalheProduto" class="conteiner_produto">
 
             <div class="imagem">
-                <img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt="" >
+                <img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt="">
             </div>
             <div class="descricao">
                 <p class="desc">iPhone 16 Pro Max Apple 512GB, Câmera
@@ -22,7 +44,7 @@
         <a href="detalheProduto" class="conteiner_produto">
 
             <div class="imagem">
-                <img src="imagens/produtos/s24ultra.png" alt="" >
+                <img src="imagens/produtos/s24ultra.png" alt="">
             </div>
             <div class="descricao">
                 <p class="desc">iPhone 16 Pro Max Apple 512GB, Câmera
@@ -39,7 +61,7 @@
         <a href="detalheProduto" class="conteiner_produto">
 
             <div class="imagem">
-                <img src="imagens/produtos/galaxym55.png" alt="" >
+                <img src="imagens/produtos/galaxym55.png" alt="">
             </div>
             <div class="descricao">
                 <p class="desc">iPhone 16 Pro Max Apple 512GB, Câmera
@@ -56,7 +78,7 @@
         <a href="detalheProduto" class="conteiner_produto">
 
             <div class="imagem">
-                <img src="imagens/produtos/galaxyzfold6.png" alt="" >
+                <img src="imagens/produtos/galaxyzfold6.png" alt="">
             </div>
             <div class="descricao">
                 <p class="desc">iPhone 16 Pro Max Apple 512GB, Câmera
@@ -73,7 +95,7 @@
         <a href="detalheProduto" class="conteiner_produto">
 
             <div class="imagem">
-                <img src="imagens/produtos/galaxyBuds.png" alt="" >
+                <img src="imagens/produtos/galaxyBuds.png" alt="">
             </div>
             <div class="descricao">
                 <p class="desc">iPhone 16 Pro Max Apple 512GB, Câmera
@@ -90,7 +112,7 @@
         <a href="detalheProduto" class="conteiner_produto">
 
             <div class="imagem">
-                <img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt="" >
+                <img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt="">
             </div>
             <div class="descricao">
                 <p class="desc">iPhone 16 Pro Max Apple 512GB, Câmera
