--- a/paginas/maisvendidos.phtml
+++ b/paginas/maisvendidos.phtml
@@ -13,9 +13,9 @@
             <hr>
             <div class="offcanvas-body">
                 <form action="">
-                  
-                        <button class="filtrar">Filtrar Agora</button>
-               
+
+                    <button class="filtrar">Filtrar Agora</button>
+
                 </form>
             </div>
         </div>
@@ -112,7 +112,7 @@
         <a href="detalheProduto" class="conteiner_produto">
 
             <div class="imagem">
-                <img src="imagens/0_AEMYWY3BEAPTA_PRD_1500_1 2.png" alt="">
+                <img src="imagens/produtos/galaxyzfold6Cinza.png" alt="">
             </div>
             <div class="descricao">
                 <p class="desc">iPhone 16 Pro Max Apple 512GB, Câmera
