--- a/paginas/cadastro.phtml
+++ b/paginas/cadastro.phtml
@@ -10,10 +10,10 @@
                 <span class="span-required" style="margin:5px 0 0 10px; color:red; display: none;">E-mail inválido</span>
 
                 <input type="password" name="Number" class="required" oninput="mainPasswordValidate()" required id="senha" placeholder="Senha" style="margin-top:20px;">
-                <span class="span-required" style="display: none; color: red;">Deve ter pelo menos 8 digetos </span>
+                <span class="span-required" style=" margin:5px 0 0 10px; display: none; color: red;">Deve ter pelo menos 8 digetos </span>
 
                 <input type="password" placeholder="Confirmar Senha" name="Number" class="required" oninput="mainPasswordValidate2()" required id="senha" style="margin-top:20px;">
-                <span class="span-required" style="display: none; color: red;">Senha senha incorreta</span>
+                <span class="span-required" style="margin:5px 0 0 10px; display: none; color: red;">Senha senha incorreta</span>
 
                 <input type="nome" name="nome" id="nome" class="required" oninput="nomeValidate()" placeholder="Nome Completo" style="margin-top:20px;" required>
                 <span class="span-required" style="margin:5px 0 0 10px; color:red; display: none;">O nome deve ter pelo menos 3 digitos</span>
