--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ header {
                 .navbar-nav {
                     .nav-item {
                         .dropdown-menu-1 {
-                            width: 60%;
+                            width: 220px !important;
 
                             background-color: rgba(0, 0, 0, 0.205);
                             border-radius: 15px;
@@ -116,16 +116,24 @@ header {
                                     color: white;
                                     font-size: 18px;
                                     font-weight: bold;
+                                    transition: 400ms all ease;
 
                                     &:hover {
-                                        background-color: transparent !important;
+                                        color: black;
+                                        background-color: white;
+                                        border-radius: 20px;
+                                        box-shadow: 0 0 10px white;
+
+                                        padding: 5px 10px;
+                                        margin: 5px 0;
+
                                     }
                                 }
                             }
                         }
 
                         .dropdown-menu-2 {
-                            width: 60%;
+                            width: 230px;
 
                             background-color: rgba(0, 0, 0, 0.205);
                             border-radius: 15px;
@@ -138,9 +146,17 @@ header {
                                     color: white;
                                     font-size: 18px;
                                     font-weight: bold;
+                                    transition: 400ms all ease;
 
                                     &:hover {
-                                        background-color: transparent !important;
+                                        color: black;
+                                        background-color: white;
+                                        border-radius: 20px;
+                                        box-shadow: 0 0 10px white;
+
+                                        padding: 5px 10px;
+                                        margin: 5px 0;
+
                                     }
                                 }
                             }
@@ -314,9 +330,10 @@ header {
                             color: var(--text_white) !important;
                             font-size: 40px !important;
                             transition: 400ms all ease !important;
+
                             &:hover {
                                 text-shadow: 0 0 10px white;
-                                
+
                             }
                         }
                     }
@@ -333,17 +350,18 @@ header {
                             font-size: 14px;
                             font-weight: bold;
                             text-decoration: none;
-                                transition: 400ms all ease !important;
-                                &:hover {
+                            transition: 400ms all ease !important;
 
-                                    /* background-color: white;
+                            &:hover {
+
+                                /* background-color: white;
                                     border-radius: 20px;
                                     color: black !important;
                                     padding: 0 5px;
                                     box-shadow: 0 0 10px white; */
-                                    text-shadow: 0 0 10px white;
-                                    
-                                }
+                                text-shadow: 0 0 10px white;
+
+                            }
                         }
                     }
                 }
@@ -1674,9 +1692,12 @@ footer {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            transition: 400ms all ease;
 
-
-
+            &:hover {
+                transform: scale(1.03, 1.03);
+                box-shadow: 0 0 10px white;
+            }
 
             p {
 
@@ -1692,7 +1713,181 @@ footer {
                 color: white;
             }
         }
+
+        #exampleModalProduto {
+            backdrop-filter: blur(5px);
+
+            .modal-dialog {
+
+                .modal-content {
+
+
+                    background-color: rgb(15, 15, 15);
+                    border: solid 1px white;
+                    border-radius: 20px;
+                    box-shadow: 0 0 10px rgba(255, 255, 255, 0.349);
+
+                    .header {
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        padding: 10px 20px 0 20px;
+
+                        h2 {
+                            margin-bottom: 0;
+                        }
+
+                        .close {
+                            background-color: transparent !important;
+                            border: none !important;
+
+                            i {
+                                font-size: 40px;
+                                color: white;
+                                transition: 400ms all ease;
+
+                                &:hover {
+                                    color: red;
+                                    text-shadow: 0 0 10px red;
+                                }
+                            }
+                        }
+                    }
+
+                    .modal-body {
+                        padding: 8px;
+
+                        .conteiner_produto {
+                            text-decoration: none !important;
+                            color: white !important;
+
+
+                            width: 100%;
+                            padding: 10px;
+                            margin-bottom: 20px;
+
+                            display: flex;
+                            align-items: center;
+                            justify-content: space-between;
+
+                            background-color: #ffffff1f;
+                            border: solid 1px white;
+                            border-radius: 20px;
+                            
+
+                            .imagem {
+                                width: 25%;
+
+                                img {
+                                    width: 100%;
+                                }
+                            }
+
+                            .descricao {
+                                width: 73%;
+
+                                .desc {
+                                    width: 100%;
+                                    display: -webkit-box;
+                                    -webkit-box-orient: vertical;
+                                    overflow: hidden;
+                                    text-overflow: ellipsis;
+                                    -webkit-line-clamp: 2;
+                                    margin-bottom: 5px;
+                                    font-size: 12px;
+                                    font-family: montserrat !important;
+                                    font-weight: bold;
+                                    color: white;
+                                }
+
+                                .preco {
+                                    color: rgb(255, 255, 255);
+
+                                    font-size: 20px;
+                                    font-weight: bold;
+                                    font-family: "montserrat";
+
+                                    margin: 0;
+                                    margin-bottom: 10px;
+                                }
+
+                                a {
+                                    text-decoration: none;
+                                    background-color: rgba(255, 255, 255, 0.2);
+                                    border-radius: 20px;
+                                    border: solid 1px white;
+                                    color: white;
+                                    font-weight: bold;
+
+                                    padding: 5px;
+                                    transition: 400ms all ease;
+
+                                    &:hover {
+                                        background-color: white;
+                                        box-shadow: 0 0 10px white;
+                                        color: black;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        #exampleModalAdcionar{
+            backdrop-filter: blur(5px);
+
+            .modal-dialog {
+
+                .modal-content {
+
+
+                    background-color: rgb(15, 15, 15);
+                    border: solid 1px white;
+                    border-radius: 20px;
+                    box-shadow: 0 0 10px rgba(255, 255, 255, 0.349);
+
+                    .header {
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        padding: 10px 20px 0 20px;
+
+                        h2 {
+                            margin-bottom: 0;
+                        }
+
+                        .close {
+                            background-color: transparent !important;
+                            border: none !important;
+
+                            i {
+                                font-size: 40px;
+                                color: white;
+                                transition: 400ms all ease;
+
+                                &:hover {
+                                    color: red;
+                                    text-shadow: 0 0 10px red;
+                                }
+                            }
+                        }
+                    }
+
+                    .modal-body {
+                        padding: 8px;
+
+                       
+                       
+                    }
+                }
+            }
+        }
+
     }
+
+
 }
 
 #main_pagamento {
@@ -1933,6 +2128,7 @@ footer {
                     font-size: 40px;
                     color: white;
                     transition: 400ms all ease;
+
                     &:hover {
                         color: red;
                         text-shadow: 0 0 10px rgb(255, 0, 0);
@@ -1953,108 +2149,129 @@ footer {
 
         .offcanvas-body {
             form {
+                h5 {
+                    color: white;
+                    font-weight: bold;
+                }
+
+                ul {
+                    margin: 0;
+                    padding: 0;
+                    margin-bottom: 20px;
+
+                    li {
+                        list-style: none;
+
+                        label {
+                            color: white;
+                            font-size: 18px;
+                            font-weight: bold;
+                        }
+                    }
+                }
+
                 .filtrar {
                     width: 100% !important;
                     height: 50px;
 
                     background-color: rgba(255, 255, 255, 0.1);
-                    border:solid 1px white !important;
+                    border: solid 1px white !important;
                     border-radius: 50px;
 
                     font-size: 20px;
                     font-weight: bold;
                     color: white;
-                        transition: 400ms all ease !important;
+                    transition: 400ms all ease !important;
 
-                        &:hover {
-                            background-color: white;
-                            border: none !important;
-                            box-shadow: 0 0 10px white;
+                    &:hover {
+                        background-color: white;
+                        border: none !important;
+                        box-shadow: 0 0 10px white;
 
-                            color: black;
+                        color: black;
 
-                        }
+                    }
                 }
             }
         }
     }
 
-}
-
-.produto_flex {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-
-    .conteiner_produto {
-        text-decoration: none !important;
-        color: white !important;
-
-
-        width: 100%;
-        padding: 10px;
-        margin-bottom: 20px;
-
+    .produto_flex {
         display: flex;
+        flex-direction: column;
+        width: 100%;
 
-        justify-content: space-between;
+        .conteiner_produto {
+            text-decoration: none !important;
+            color: white !important;
 
-        background-color: #ffffff1f;
-        border: solid 1px white;
-        border-radius: 20px;
-        box-shadow: 0 0 10px rgba(255, 255, 255, 0.425);
 
-        .imagem {
-            width: 30%;
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 20px;
 
-            img {
-                width: 100%;
-            }
-        }
+            display: flex;
 
-        .descricao {
-            width: 68%;
+            justify-content: space-between;
 
-            .desc {
-                width: 100%;
-                display: -webkit-box;
-                -webkit-box-orient: vertical;
-                overflow: hidden;
-                text-overflow: ellipsis;
-                -webkit-line-clamp: 2;
-                margin-bottom: 5px;
-                font-size: 13px;
-                font-family: montserrat !important;
-                font-weight: bold;
-                color: white;
-            }
+            background-color: #ffffff1f;
+            border: solid 1px white;
+            border-radius: 20px;
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.425);
 
-            .preco {
-                color: rgb(255, 208, 0);
+            .imagem {
+                width: 30%;
 
-                font-size: 24px;
-                font-weight: bold;
-                font-family: "montserrat";
-
-                margin: 0;
-            }
-
-            .sub_preco {
-                font-family: Arial, Helvetica, sans-serif;
-                color: white;
-                width: 170px;
-                font-size: 12px;
-                margin: 0;
-
-                span {
-                    font-weight: bold;
+                img {
+                    width: 100%;
                 }
             }
 
+            .descricao {
+                width: 68%;
+
+                .desc {
+                    width: 100%;
+                    display: -webkit-box;
+                    -webkit-box-orient: vertical;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    -webkit-line-clamp: 2;
+                    margin-bottom: 5px;
+                    font-size: 13px;
+                    font-family: montserrat !important;
+                    font-weight: bold;
+                    color: white;
+                }
+
+                .preco {
+                    color: rgb(255, 208, 0);
+
+                    font-size: 24px;
+                    font-weight: bold;
+                    font-family: "montserrat";
+
+                    margin: 0;
+                }
+
+                .sub_preco {
+                    font-family: Arial, Helvetica, sans-serif;
+                    color: white;
+                    width: 170px;
+                    font-size: 12px;
+                    margin: 0;
+
+                    span {
+                        font-weight: bold;
+                    }
+                }
 
 
+
+            }
         }
     }
+
 }
 
 
@@ -2542,6 +2759,27 @@ footer {
             .conteiner_produto {
                 width: 224px;
             }
+        }
+    }
+    #main_admin {
+        margin: 60px auto;
+
+        .conteiner_admin {
+            justify-content: center !important;
+            gap: 20px !important;
+
+            #exampleModalProduto {
+                .modal-body {
+                    display: flex;
+                    flex-wrap: wrap;
+
+                    gap: 10px 20px;
+                    .conteiner_produto {
+                        width: 380px !important;
+                    }
+                }
+            }
+
         }
     }
 }
