--- a/paginas/pesquisa.phtml
+++ b/paginas/pesquisa.phtml
@@ -1,7 +1,7 @@
 <section id="main_produtos">
 
     <div class="top">
-        <h2>Mais Vendidos</h2>
+        <h2>Sua Pesquisa</h2>
         <button class="btn-of" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling"><i class="bi bi-list"></i>Filtro</button>
 
         <div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
